tạo thêm chức năng nghỉ phép 30/11

--- a/frontend/public/danh-sach.html
+++ b/frontend/public/danh-sach.html
@@ -24,6 +24,7 @@
         <a class="nav-link" href="./bao-cao-luong.html">Báo cáo lương</a>
         <a class="nav-link" href="./hop-dong.html">Hợp đồng</a>
         <a class="nav-link" href="./phu-cap.html">Phụ cấp</a>
+        <a class="nav-link" href="./quan-ly-nghi-phep.html">Đơn nghỉ</a>
 
         <!-- Admin Menu - Hiển thị cho tất cả user nhưng routes sẽ chặn nếu không phải admin -->
         <div class="admin-menu">
